<resources>
    <string name="app_name">Jeux éducatifs</string>
    <string name="geography_conteneur_rect">conteneur rectangle</string>
    <string name="to_bad">Dommage, la réponse était</string>
    <string name="Well_played">Bravo !</string>
    <string name="You_have_win">Bravo, tu as gagné !</string>
    <string name="chouette">Chouette sur une branche</string>
    <string name="mute">Mute/Unmute</string>
    <string name="Level_1">niveau 1</string>
    <string name="Level_2">niveau 2</string>
    <string name="Level_3">niveau 3</string>
    <string name="Level_4">niveau 4</string>
    <string name="Level_5">niveau 5</string>
    <string name="Selectionned_country">paysSelectione:</string>
    <string name="Too_bad">Dommage</string>
    <string name="Try_again">Essaye encore !</string>
    <string name="first_year_of_primary_school">CP</string>
    <string name="second_year_of_primary_school">CE1</string>
    <string name="third_year_of_primary_school">CE2</string>
    <string name="fourth_year_of_primary_school">CM1</string>
    <string name="fifth_year_of_primary_school">CM2</string>
    <string name="Level_score">niveau record</string>
    <string name="starPicture">imageEtoile</string>
    <string name="ghostPicture">imageFantome</string>
    <string name="pondPicture">imageGrenouille</string>
    <string name="demo_first_number">3</string>
    <string name="demo_second_number">5</string>
    <string name="demo_sign">+</string>
    <string name="game_order">Consigne</string>
    <string name="country_name">Nom du pays</string>
    <string name="score">Score</string>
    <string name="first_flag">Premier drapeau</string>
    <string name="second_flag">Deuxième drapeau</string>
    <string name="third_flag">Troisième drapeau</string>
    <string name="fourth_flag">Quatrième drapeau</string>
    <string name="lives">Vies :</string>
    <string name="heart_picture">Image coeur</string>
    <string name="elephant_picture">Image éléphant</string>
    <string name="operation_game">opération</string>
    <string name="mystery_word_game">Mot Mystère</string>
    <string name="tag_game">Drapeaux</string>
    <string name="tag_inv">Drapeaux inversés</string>
    <string name="geography_game">Géographie</string>
    <string name="piano_game">Piano</string>
    <string name="connect4_game">Puissance 4</string>
    <string name="astronomie_game">Astronomie</string>
    <string name="choice_levels">Choisis ton niveau</string>
    <string name="return_menu">Retour au menu</string>
    <string name="play_again">Rejouer</string>
    <string name="result_popup">Fin de partie!</string>
    <string name="button">Button</string>
    <string name="conjugaison_game">Conjugaison</string>
    <string name="tabscore">Tableau des scores</string>
    <string name="text_viewscore">veulliez cliquer sur un boutton pour affiché les scores</string>
    <string name="Score_activity">Scores</string>
    <string name="geometry_game">Géométrie</string>
    <string name="figureProperty">Propriété de la figure</string>
    <string name="figureName">Nom de la figure</string>
    <string name="Vrai">Vrai</string>
    <string name="Faux">Faux</string>
    <string name="anglais">Anglais</string>
    <string name="mythology_game">Mythologie</string>
    <string name="empty">" "</string>
    <string name="histoire">Histoire</string>
    <string name="chess">Echec</string>
</resources>

