<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flag_activity_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <ImageView
        android:id="@+id/activity_flag_IA_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/acivity_flag_player_img"
        android:layout_marginTop="20dp"
        app:srcCompat="@mipmap/ghost"
        android:contentDescription="@string/ghostPicture" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_flag_IA_img"
        tools:context="com.example.cassa.entrainementprojettut.flag.FlagActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_flag_name01-txt"
            android:text="@string/country_name"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_flag_score-txt"
            android:text="@string/score"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:textSize="@dimen/font_size" />

        <ImageView
            android:id="@+id/activity_flag_flag01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/allemagne"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:contentDescription="@string/first_flag" />

        <ImageView
            android:id="@+id/activity_flag_flag02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/albanie"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:contentDescription="@string/second_flag" />

        <ImageView
            android:id="@+id/activity_flag_flag03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/allemagne"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:contentDescription="@string/third_flag" />

        <ImageView
            android:id="@+id/activity_flag_flag04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/albanie"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center"
            android:contentDescription="@string/fourth_flag" />

    </GridLayout>

</android.support.v7.widget.LinearLayoutCompat>